# reproducibility_week5_project

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.sandboxA/: pyvenv.cfg
data/: README.md  books.db
data/processed/: books.csv  books_clean.csv  books_cleaned.csv
models/: model.pkl  vectorizer.pkl
src/: api.py  app.py  classify.py  clean_books.py  fetch_data.py  scrape_books.py
