[tool.poetry]
name = "reproductibility-mlop-project"
version = "0.1.0"
description = ""
authors = ["itsboyac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.125.0"
uvicorn = "^0.38.0"
scikit-learn = "^1.8.0"
joblib = "^1.5.3"
pandas = "^2.3.3"
numpy = "^2.3.5"
requests = "^2.32.5"
streamlit = "^1.52.2"
beautifulsoup4 = "^4.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
